@@ -1,4 +1,10 @@
+2010-01-02 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
+	* bug fix: log live process
+	* bug fix: default netlink buffer changed to 4096
+
 2009-12-24 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
+	* remove inotify because it does not work with procfs
+	* add options to retrieve environ from procfs
 	* remove inotify because it does not work with procfs
 	* add options to retrieve environ from procfs
 
